# dope-map

./: .gitignore  .releaserc.json  README.md  asset-manifest.json  eslint.config.js  index.html  jest.config.ts  package-lock.json  package.json  rollup.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-release.yml  ff.yml  lint.yml  setup.yml  test.yml  tsc.yml
__fixtures__/: index.ts
__tests__/: DapperMapper.test.ts  DopeMap.gc.test.ts  DopeMap.test.ts  arrayArgs.test.ts  dopeHash.test.ts  useDopeMap.test.ts  v1.test.ts
benchmarks/: DapperMapperBenchmark.ts  benchmark.ts  constants.ts  utils.ts
docs/: package-lock.json  package.json  tsconfig.json
docs/public/: index.html
docs/src/: App.css  App.tsx  constants.ts  index.css  utils.ts
rust_hash/: Cargo.toml
rust_hash/src/: lib.rs
src/: dopeHash.ts  dopeMap.ts  hasher.ts  index.ts  types.ts  v1.ts  v2.ts
src/react/: index.ts  useDopeMap.ts
static/css/: main.228ebce1.css  main.228ebce1.css.map  main.2e7ba52f.css  main.2e7ba52f.css.map  main.30e01729.css  main.30e01729.css.map  main.9aaa60e4.css  main.9aaa60e4.css.map  main.fdbbd54c.css  main.fdbbd54c.css.map
static/js/: main.12cd4351.js  main.17418142.js  main.17418142.js.map  main.46471850.js  main.51dbf8d5.js  main.6a85e75e.js  main.6a85e75e.js.map  main.6e064a0f.js  main.6e3005fd.js  main.7515116e.js  main.958d966d.js  main.9e2d14e9.js  main.a4caf9e7.js  main.a4caf9e7.js.map  main.aa15ae78.js  main.aa15ae78.js.LICENSE.txt  main.b2c7b805.js  main.b2c7b805.js.map  main.b6c1151a.js  main.b6c1151a.js.map  main.fa0a1a47.js
(+14 files in other folders)
