[package]
name = "rust_hash"
version = "0.1.0"
edition = "2021"
authors = ["John Haupenthal"]
description = "Internal hashing library for dope-map"
license = "MIT"
repository = "https://github.com/johnhaup/dope-map"

[lib]
crate-type = ["cdylib"] # Ensures the library can be compiled to a shared library (.wasm)

[dependencies]
wasm-bindgen = "0.2" # Allows communication between Rust and JavaScript
ahash = { version = "0.8", default-features = false, features = ["runtime-rng"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
